--- a/Aiplatformassign1.ipynb
+++ b/Aiplatformassign1.ipynb
@@ -72,8 +72,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "223c2238-ba03-4617-944c-1c2199f0a384",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/100] - Loss: 16.325661\n",
+      "Epoch [10/100] - Loss: 10.823164\n",
+      "Epoch [20/100] - Loss: 7.602088\n",
+      "Epoch [30/100] - Loss: 6.007178\n",
+      "Epoch [40/100] - Loss: 5.227865\n",
+      "Epoch [50/100] - Loss: 4.842257\n",
+      "Epoch [60/100] - Loss: 4.640358\n",
+      "Epoch [70/100] - Loss: 4.520351\n",
+      "Epoch [80/100] - Loss: 4.433055\n",
+      "Epoch [90/100] - Loss: 4.353974\n",
+      "Epoch [100/100] - Loss: 4.269690\n",
+      "\n",
+      "Prediction for input 5.0 → 5.148486137390137\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 100\n",
+    "for epoch in range(epochs):\n",
+    "    y_pred = model(x)\n",
+    "    loss = criterion(y_pred, y)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    if (epoch + 1) % 10 == 0 or epoch == 0:\n",
+    "        print(f\"Epoch [{epoch+1}/{epochs}] - Loss: {loss.item():.6f}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    test_input = torch.tensor([[5.0]])\n",
+    "    prediction = model(test_input)\n",
+    "    print(\"\\nPrediction for input 5.0 →\", prediction.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba46b6d8-ac61-460b-b51e-098cb82796c2",
    "metadata": {},
    "outputs": [],
    "source": []
